Added Constants Class

--- a/LionsTruck/force-app/main/default/layouts/Opportunity-Opportunity %28Sales%29 Layout.layout-meta.xml
+++ b/LionsTruck/force-app/main/default/layouts/Opportunity-Opportunity %28Sales%29 Layout.layout-meta.xml
@@ -31,6 +31,10 @@
                 <behavior>Readonly</behavior>
                 <field>ExpectedRevenue</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>L_ServicesAmount__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -48,10 +52,6 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>L_TrucksAmount__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>L_ServicesAmount__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
